# OpenVEILJava

./: CHANGES  CMakeLists.txt  LICENSE  README.md  com_tecsec_OpenVEIL_Connector.h  com_tecsec_OpenVEIL_RequestResults.h
OpenVEILWrapper/: CMakeLists.txt  Connector.cpp  Connector.h  Environment.cpp  Environment.h  Favorite.cpp  Favorite.h  Session.cpp  Session.h  Token.cpp  Token.h  handle.h
Samples/: CMakeLists.txt
Samples/tokenList/: CMakeLists.txt  tokenList.java
com/tecsec/OpenVEIL/: ConnectionStatus.java  Connector.java  Environment.java  Favorite.java  GenericConnector.java  KeyVEILConnector.java  LoginStatus.java  RequestResults.java  RequestResultsBinary.java  Session.java  Token.java
