INCLUDE_DIRECTORIES(${PUBLIC_BINARY_TOP_DIR})

set(CMAKE_DEBUG_POSTFIX "")
add_library(OpenVEILjavaWrapper SHARED Connector.cpp handle.h)

TARGET_LINK_LIBRARIES(OpenVEILjavaWrapper OpenVEILCore)
set_target_properties(OpenVEILjavaWrapper PROPERTIES VERSION ${OPENVEIL_VERSION} SOVERSION ${OPENVEIL_SO_VERSION})

install(TARGETS OpenVEILjavaWrapper ARCHIVE DESTINATION ${LIB_DIR} LIBRARY DESTINATION ${SHLIB_DIR} RUNTIME DESTINATION ${BIN_DIR} )